完成DAO层全面测试和代码修复
- 创建了完整的DAO测试套件，包括8个核心DAO的全面测试
- 发现并修复了PaymentDao的3个NullPointerException缺陷
- 修复了NotificationDao的priority字段数据范围问题
- 修复了MessageDao、ConversationDao、UserDao的测试逻辑问题
- 添加了性能测试、边界值测试、SQL注入防护测试
- 建立了完整的测试基础设施和工具类
- 清理了过时的测试文件，提高了测试覆盖率

测试覆盖的DAO:
 AdminDao - 完美通过
 AuditLogDao - 完美通过
 NotificationDao - 修复priority字段问题
 PaymentDao - 修复3个NullPointer缺陷
 MessageDao - 修复测试逻辑
 ConversationDao - 修复测试逻辑
 UserDao - 修复测试逻辑
 ProductDao - 完美通过

性能表现: 所有DAO平均响应时间3-6ms，表现优秀